# untitled

./: .gitignore  API.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATAPACK_FORMAT.md  Python-Generator.py  README.md  assetstudio.py  build.gradle  commands to use  generate_assets.py  main.py  publish-local-modules.bat  pyproject.toml  settings.gradle
.github/: AGENTS.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.tmp-studio-smoke/: project.json
api/: build.gradle
asset_studio/: __init__.py  main.py
client/: README.md
compiler/: asset_builder.py  code_generator.py  datapack_builder.py  dependency_resolver.py  module_builder.py
core/: README.md  build.gradle
datapacks/: README.md
docs/: ADDON_DEVELOPMENT.md  ALPHA_VALIDATION_AND_FEEL_REPORT.md  API_USAGE.md  ARCHITECTURE.md  ASSET_STUDIO.md  CANONICAL_OWNERSHIP_MAP.md  DATA_DRIVEN_SYSTEMS.md  DATA_FORMATS.md  DOCUMENTATION_INDEX.md  ECOSYSTEM_MIGRATION_PLAN.md  ECOSYSTEM_MODULE_DEPENDENCY_GRAPH.md  ECOSYSTEM_MUTATION_AUDIT.md  ECOSYSTEM_REPO_EXTRACTION_PLAN.md  ENTITY_MODEL_PIPELINE_AUDIT.md  ENTITY_PLACEHOLDER_PIPELINE.md  EXTRACTION_READINESS_SUMMARY.md  EXTRACTION_WORKFLOW_COMPLETE.md  EXTREMECRAFT_DESIGN_BIBLE_FIRST_RELEASE.md  EXTREMECRAFT_FUTURE_DIRECTION.md  EXTREMECRAFT_STUDIO_SHARED_CONTRACT.md  FIRST_RELEASE_ART_HANDOFF.md  FIRST_RELEASE_CONTENT_MANIFEST.md  FIRST_RELEASE_GAMEPLAY_REDESIGN.md  FIRST_RELEASE_STRUCTURAL_CONVERGENCE_REPORT.md  FOUNDATION_CLEANUP_REPORT.md  GITHUB_REPO_CREATION_WORKFLOW.md  LOCAL_MAVEN_PUBLICATION_GUIDE.md  MODPACK_SUPPORT.md  MODULE_SYSTEM.md  (+16 more)
(+1660 files in other folders)
